syntax = "proto3";

option csharp_namespace = "MineralInventory";

package client;

service Account {
    rpc SignIn (UserInfo) returns (UserReply);
   
}

service  InOut{
  rpc GetListActiveCustomer(MasterRequest) returns (CustomerResponse);
  rpc GetListAllCustomer(MasterRequest) returns (CustomerResponse);

  rpc GetListActiveUser(MasterRequest) returns (UserResponse);
  rpc GetListAllUser(MasterRequest) returns (UserResponse);

  rpc GetListGender(MasterRequest) returns (MasterDataResponse);
  rpc GetListPosition(MasterRequest) returns (MasterDataResponse);
  rpc GetListStatusOrder(MasterRequest) returns (MasterDataResponse);
  rpc GetListTypeGood(MasterRequest) returns (MasterDataResponse);
  rpc GetListTypeQRCode(MasterRequest) returns (MasterDataResponse);
  rpc GetListTypeBag(MasterRequest) returns (MasterDataResponse);

  rpc GetListRemainParcelInWareHouse(MasterRequest) returns (ParcelInWareHouseResponse);

  rpc DeleteWareHouse(WareHouseInfo) returns (Response);
  rpc InsertWareHouse(WareHouseInfo) returns (Response);
  rpc UpdateWareHouse(WareHouseInfo) returns (Response);
  
  rpc InsertParcel(ParcelInfo) returns (ParcelReply);
  rpc UpdateWeightTotalParcel(ParcelInWareHouseInfo) returns(Response);
  rpc UpdateWeightUsedParcel(ParcelInWareHouseInfo) returns(Response);
  rpc GetListWareHouse(MasterRequest) returns (WareHouseResponse);

  rpc GetListQRCodeParcel(MasterRequest) returns (QRCodeResponse);

  rpc GetListArea(MasterRequest) returns (AreaResponse);
  rpc GetListParcel(MasterRequest) returns (ParcelResponse);

  rpc DeleteUser(UserInfo) returns (Response);
  rpc InsertArea(AreaInfo) returns (Response);
  rpc InsertCustomer(CustomerInfo) returns (Response);
  rpc InsertQRCodeOrder(MasterRequest) returns (Response);
  rpc InsertQRCodeParcel(MasterRequest) returns (Response);
  rpc InsertUser(UserInfo) returns (Response);
  rpc UpdateCustomerInfo(CustomerInfo) returns (Response);
  rpc UpdateCustomerPass(CustomerInfo) returns (Response);

  rpc UpdateUserInfo(UserInfo) returns (Response);
  rpc UpdateUserPass(UserInfo) returns (Response);
  rpc GetListInfoAddress(MasterRequest) returns (AddressResponse);

  rpc Test(MasterRequest) returns (Response);
}
service Order
{
  rpc GetListOrder(MasterRequest) returns (OrderResponse);
  rpc GetListORderByWareHouse(MasterRequest) returns (OrderResponse);
  rpc GetReportSummary(MasterRequest) returns (ReportSummaryResponse);
  rpc InsertOrder(OrderInfo) returns (OrderReply);
  rpc DeleteOrder(OrderInfo) returns (Response);
  rpc UpdateOrder(OrderInfo) returns (Response);
  rpc UpdateStatusOrder(OrderInfo) returns (Response);
}
message ParcelInfo
{
  string ParcelName = 1;
  string createdDate = 2;
  int64 idQRCode = 3;
  int32 typeGoodId =4;
  string typeGoodName = 5; 
  int32 typeBag = 6;
  string typeBagName = 7;
  int32 id = 8;
  string imgQRCode = 9;
  string parcelCode = 10;
 }

message MasterRequest {
    string fromDate = 1;
    string toDate = 2;
    int32 userId = 3;
    int32 idWareHouse = 4;
    string imgQRCode = 5;
    int64 idParcel = 6;
    int32 type = 7;
    int64 idOrder =8;
    string file = 9;
}
message ParcelReply
{
  Response response = 1;
  ParcelInfo data = 2;
}
message ParcelResponse
{
  Response response = 1;
  repeated ParcelInfo data = 2;
}
message Response {
  ResponseState state = 1;
  string message = 2;
}
message UserReply {
  Response response = 1;
  UserInfo info = 2;
}
message UserInfo
{
  string username = 1;
  string employeeCode = 2;
  string employeeName = 3;
  int32 position = 4;
  int32 gender = 5;
  string image = 6;
  string idNumber = 7;
  int32 id = 8;
  string password = 9;
  string positionName = 10;
  string genderName = 11;
  string dayOfBirth = 12;
  string token = 13;
}
message UserResponse 
{
  Response response = 1;
  repeated UserInfo data = 2;

}
enum ResponseState {
  SUCCESS = 0;
  FAIL = 1;
}
message WareHouseInfo
{
  string wareHouseCode  = 1;
  string wareHouseName = 2;
  int32 provinceId = 3;
  int32 districtId = 4; 
  int32 areaId = 5;
  double latitude = 6;
  double longitude = 7;
  int32 id = 8;
  bool is_deleted = 9; 
  int32 ward_id = 10;
  string address = 11;
  string areaName = 12;
  string  provinceName = 13;
  string districtName = 14;
  string wardName = 15;
  
}
message WareHouseReply
{
  Response response = 1;
  WareHouseInfo Data = 2;
}
message WareHouseResponse
{
  Response response = 1;
  repeated WareHouseInfo Data = 2;
}
message QRCodeInfo
{
  int64 id =1 ;
  string imgQRCode = 2;
  int32 type = 3;
  string createdDate = 4;
  string typeName = 5;
}
message QRCodeResponse
{
  Response response = 1;
  repeated QRCodeInfo data = 2;
}
message ParcelInWareHouseInfo
{
  int64 id = 1;
  int64 idParcel = 2;
  int32 idWareHouse  = 3;
  double weightUsed = 4;
  double weightTotal = 5;
  double weightLeft = 6;
  string parcelName = 7;
  int32 typeGoodId = 8;
  string typeGoodName = 9;
  int64 idQRCode = 10;
  string imgQRCode = 11;
  double weight = 13;
  string parcelCode = 14;
  
}
message ParcelInWareHouseResponse
{
  Response response = 1;
  repeated ParcelInWareHouseInfo data = 2;
}
message CustomerInfo
{
  int64 id = 1;
  string customerName = 2;
  string Address = 3;
  string username = 4;
  string password = 5;
}
message CustomerResponse
{
  Response response = 1;
  repeated CustomerInfo data= 2;
}
message MasterDataInfo
{
  int32 objectId = 1;
  string objectName = 2;

}
message MasterDataResponse
{
  Response response = 1;
  repeated MasterDataInfo data= 2;

}
message AreaInfo
{
  int32 id = 1;
  string areaName = 2;
  string Address = 3;
}
message AreaResponse
{
  Response response = 1;
  repeated AreaInfo data = 2;
}
message OrderInfo
{
  int64 id  = 1;
  string orderCode = 2;
  string createdDate = 3;
  int64 idQRCode = 4;
  int32 typeGoodId = 5;
  string typeGoodName = 6;
  double weight = 7;
  int32 statusId = 8;
  string statusName = 9;
  string expiry = 10;
  int32 idUser = 11;
  int32 idCustomer = 12;
  int32 idWareHouse = 13;
  string wareHouseName = 14;
  string wareHouseCode = 15;

  string employeeCode = 16;
  string employeeName = 17;
  string customerName = 18;
  string customerAddress = 19;
  string imgQRCode = 20;

}
message OrderResponse 
{
  Response response = 1;
  repeated OrderInfo data = 2;
}
message OrderReply 
{
  Response response = 1;
  OrderInfo data = 2;
}
message ReportSummaryInfo
{
  int32 idWareHouse = 1;
  string dateCheck = 2;
  int64 cntAllOrder = 3;
  int64 cntNewOrder = 4;
  int64 cntCompletedOrder =5;
  int64 cntCanceledOrder = 6;
  string wareHouseCode = 7;
  string wareHouseName = 8;
}
message ReportSummaryResponse
{
  Response response = 1;
  repeated ReportSummaryInfo data = 2;
}
message AddressInfo
{
  int32 areaId = 1;
  string areaName = 2;
  int32 provinceId = 3;
  string provinceName = 4;
  int32 districtId = 5;
  string districtName = 6;
  int32 wardId = 7;
  string wardName = 8;
}
message AddressResponse 
{
  Response  response =1 ;
  repeated AddressInfo data = 2;
}